# crajcan.github.io

./: .Cargo.toml  .gitmodules  CNAME  Cargo.toml  README.md  index.html  resume.html  temp_index.html
pkg/: README.md  package.json  personal_site.d.ts  personal_site.js  personal_site_bg.wasm  personal_site_bg.wasm.d.ts
rust_jobs/: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  css_reset.css  css_reset.scss  index.scss  target.html
rust_jobs/api/: README.md  fly.toml  test_data.json
rust_jobs/database/: README.md
rust_jobs/docs/: index.html
rust_jobs/interaction/: keywords_2023_09_26.csv
rust_jobs/src/: app.rs  company.rs  company_details.rs  company_list.rs  main.rs  video.rs  video_details.rs  videos_list.rs
src/: handlers.rs  lib.rs  todo.rs
src/app/: mod.rs
src/components/: app.rs  grid.rs  mod.rs
src/utils/: element_helper.rs  event_helper.rs  logger.rs  mod.rs  personal_site_error.rs  render.rs
stylesheets/: index.css
