[package]
name = "rust_jobs"
version = "0.1.0"
edition = "2021"
description = "Frontend for the Rust job board"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo = "0.10.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "DomTokenList",
]